--- a/nbs/00_core.ipynb
+++ b/nbs/00_core.ipynb
@@ -6,16 +6,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# default_exp core"
+    "#default_exp core"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# module name here\n",
+    "# test\n",
     "\n",
-    "> API details."
+    "> test if this is working"
    ]
   },
   {
