--- a/nbs/index.ipynb
+++ b/nbs/index.ipynb
@@ -7,16 +7,16 @@
    "outputs": [],
    "source": [
     "#hide\n",
-    "from your_lib.core import *"
+    "# from mitl.core import *"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Project name here\n",
+    "# Mitl (model in the loop)\n",
     "\n",
-    "> Summary description here."
+    "> this is a minimal example of how you can use human/model in the loop as part of your annotation workflow"
    ]
   },
   {
